--- a/src/style.scss
+++ b/src/style.scss
@@ -86,7 +86,7 @@ body{
   margin: 0;
 }
 :root{
-  width: 100vw;
+  width: 100%;
   height: 500vh;
   background: linear-gradient(45deg, $cl-green-4 0%, $cl-green-3 100%);
 }
