--- a/src/footer.scss
+++ b/src/footer.scss
@@ -1,11 +1,57 @@
 @import "style";
 
 footer{
-    width: 100vw;
+    width: 100%;
     height: 88px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background: $cl-beige-2;
+}
+
+#footer-menu{
+    display: flex;
+    width: 317px;
+    flex-direction: column;
+    @media only screen and (min-width: 1024px) {
+        width: 918px;
+        flex-direction: row;
+    }
+    @media only screen and (min-width: 1920px) {
+        width: 1168px;
+    }
+    justify-content: space-between;
+    align-items: center;
+}
+#footer-title{
+    color: $cl-gray-3;
+}
+#footer-links{
+    display: flex;
+    flex-direction: row;
+    width: 317px;
+    @media only screen and (min-width: 1024px) {
+        width: 419px;
+    }
+    justify-content: space-between;
+    align-items: center;
+}
+footer-lc{
+    display: flex;
+    flex-direction: row;
+    width: 93px;
+    @media only screen and (min-width: 1024px) {
+        width: 120px;
+    }
+    justify-content: space-between;
+    align-items: center;
+}
+footer-link:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    text-underline-color: $cl-black;
+    text-underline-style: single;
+    text-underline-position: under;
+    text-underline-offset: 2px;
 }
