--- a/src/style.scss
+++ b/src/style.scss
@@ -85,8 +85,19 @@ h3 {
 body{
   margin: 0;
 }
+
+main{
+  display: flex;
+  flex-direction: column;
+  gap:75px;
+  @media only screen and (min-width: 1024px) {
+    gap:135px;
+  }
+  justify-content: center;
+  align-items: center;
+}
+
 :root{
   width: 100%;
-  height: 500vh;
-  background: linear-gradient(45deg, $cl-green-4 0%, $cl-green-3 100%);
+  background: $cl-beige-1;
 }
