--- a/src/nav.scss
+++ b/src/nav.scss
@@ -3,10 +3,14 @@
 nav{
   width: 100%;
   height: 88px;
+  position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  backdrop-filter: blur(10px);
+  //backdrop-filter: blur(10px);
+}
+#observe-point{
+  height: 450px;
 }
 #nav-menu{
   display: flex;
@@ -20,6 +24,14 @@ nav{
   }
   justify-content: space-between;
   align-items: center;
+}
+#nav-logo{
+  width: 133px;
+  height: 22px;
+  @media only screen and (min-width: 1024px) {
+    width:181.84px;
+    height:30.24px;
+  }
 }
 #nav-links{
   display: none;
