--- a/src/nav.scss
+++ b/src/nav.scss
@@ -54,10 +54,12 @@ nav-link{
   color: $cl-white;
 }
 nav-link:hover{
-  cursor: pointer;
-  text-decoration: underline;
-  text-underline-color: $cl-white;
-  text-underline-style: single;
-  text-underline-position: under;
-  text-underline-offset: 2px;
+  @media only screen and (min-width: 1024px) {
+    cursor: pointer;
+    text-decoration: underline;
+    text-underline-color: $cl-white;
+    text-underline-style: single;
+    text-underline-position: under;
+    text-underline-offset: 2px;
+  }
 }
