--- a/src/content.scss
+++ b/src/content.scss
@@ -57,3 +57,10 @@
     color: $cl-black
   }
 }
+
+#chooser-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
