--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,7 @@ $cl-beige-1: #F9F7F4;
 //fonts
 @import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
 $ff-roboto: "Roboto", Serif;
-h1, h2, h3, .p, .p-big, .p-small {
+h1, h2, h3, .p-med, .p-big, .p-sm {
   font-family: $ff-roboto;
   font-style: normal;
 }
