--- a/src/chooser.scss
+++ b/src/chooser.scss
@@ -73,7 +73,8 @@ chooser-card{
 }
 .chooser-content{
   position: absolute;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   z-index: 1;
   padding: 25px;
   @media only screen and (min-width: 1024px) {
@@ -95,6 +96,24 @@ chooser-card{
 .chooser-h, .chooser-p{
   width: 290px;
   color: $cl-white;
+}
+.chooser-h{
+  margin-bottom: 13px;
+  @media only screen and (min-width: 1024px) {
+    margin-bottom: 16px;
+  }
+}
+.chooser-bt{
+  align-self: start;
+  color: $cl-white;
+  padding: 0;
+  margin-top: 178px;
+  @media only screen and (min-width: 1024px) {
+    margin-top: 280px;
+  }
+  @media only screen and (min-width: 1920px) {
+    margin-top: 277px;
+  }
 }
 
 #ch1{background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.06) 48.44%, rgba(0, 0, 0, 0.5) 100%),  url("/chooser1.png");}
