--- a/src/style.scss
+++ b/src/style.scss
@@ -16,12 +16,12 @@ $cl-beige-1: #F9F7F4;
 //fonts
 @import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
 $ff-roboto: "Roboto", Serif;
-h1, h2, h3, .p-med, .p-big, .p-sm {
+.t-h1, .t-h2, .t-h3, .p-med, .p-big, .p-sm {
   font-family: $ff-roboto;
   font-style: normal;
 }
 
-h1 {
+.t-h1 {
   font-weight: 700;
   font-size: 34px;
   line-height: 38.08px;
@@ -31,7 +31,7 @@ h1 {
   }
 }
 
-h2 {
+.t-h2 {
   font-weight: 700;
   font-size: 34px;
   line-height: 38.08px;
@@ -41,7 +41,7 @@ h2 {
   }
 }
 
-h3 {
+.t-h3 {
   font-weight: 500;
   font-size: 23px;
   line-height: 27.6px;
