--- a/src/chooser.scss
+++ b/src/chooser.scss
@@ -103,6 +103,12 @@ chooser-card{
     margin-bottom: 16px;
   }
 }
+.chooser-ad{
+  margin-bottom: 30px;
+  @media only screen and (min-width: 1024px) {
+    margin-bottom: 35px;
+  }
+}
 .chooser-bt{
   align-self: start;
   color: $cl-white;
