Add maker fields

--- a/src/chooser.scss
+++ b/src/chooser.scss
@@ -124,7 +124,7 @@ chooser-card{
 }
 .chooser-bt::after{
   margin-left: 15px;
-  content: url("/public/arrow-white.svg");
+  content: url("/arrow-white.svg");
 }
 .chooser-bt:hover{
   @media only screen and (min-width: 1024px) {
