--- a/src/maker.scss
+++ b/src/maker.scss
@@ -30,20 +30,38 @@
 .maker-form{
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
   background-color: $cl-white;
   border-radius: 30px;
   padding: 20px 20px 40px 20px;
-  gap: 30px;
+  row-gap: 20px;
+  column-gap: 30px;
   @media only screen and (min-width: 1024px) {
     padding: 60px;
     border-radius: 50px;
-    gap: 33px;
+    column-gap: 33px;
   }
   @media only screen and (min-width: 1920px) {
     padding: 70px;
+    row-gap: 30px;
   }
+}
+.maker-field{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 278px;
+  @media only screen and (min-width: 1024px) {
+    width: 382px;
+  }
+  @media only screen and (min-width: 1920px) {
+    width: 498px;
+  }
+}
+.maker-input{
+  border-width: 0;
 }
