--- a/src/maker.scss
+++ b/src/maker.scss
@@ -64,4 +64,43 @@
 }
 .maker-input{
   border-width: 0;
+  width: 100%;
+  height: 43px;
+  background-color: $cl-beige-2;
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  @media only screen and (min-width: 1024px) {
+    height: 68px;
+    padding: 20px;
+  }
+}
+.maker-line-field{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  box-sizing: border-box;
+  width: 100%;
+}
+#maker-com{
+  height: 132px;
+  @media only screen and (min-width: 1024px) {
+    height: 152px;
+  }
+}
+.maker-input-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+}
+.maker-bt-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  box-sizing: border-box;
+  gap: 10px;
+  @media only screen and (min-width: 1024px) {
+    gap: 30px;
+  }
 }
