--- a/src/footer.scss
+++ b/src/footer.scss
@@ -1,5 +1,4 @@
-@import "style";
-
+@use "style" as *;
 footer{
     width: 100%;
     height: 88px;
@@ -14,6 +13,8 @@ footer{
     display: flex;
     width: 317px;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     @media only screen and (min-width: 1024px) {
         width: 918px;
         flex-direction: row;
@@ -21,8 +22,6 @@ footer{
     @media only screen and (min-width: 1920px) {
         width: 1168px;
     }
-    justify-content: space-between;
-    align-items: center;
 }
 #footer-title{
     color: $cl-gray-3;
@@ -31,21 +30,21 @@ footer{
     display: flex;
     flex-direction: row;
     width: 317px;
+    justify-content: space-between;
+    align-items: center;
     @media only screen and (min-width: 1024px) {
         width: 419px;
     }
-    justify-content: space-between;
-    align-items: center;
 }
 footer-lc{
     display: flex;
     flex-direction: row;
     width: 93px;
+    justify-content: space-between;
+    align-items: center;
     @media only screen and (min-width: 1024px) {
         width: 120px;
     }
-    justify-content: space-between;
-    align-items: center;
 }
 footer-link:hover{
     @media only screen and (min-width: 1024px) {
