--- a/src/nav.scss
+++ b/src/nav.scss
@@ -1,5 +1,4 @@
-@import "style";
-
+@use "style" as *;
 nav{
   width: 100%;
   height: 88px;
@@ -13,14 +12,14 @@ nav{
   display: flex;
   flex-direction: row;
   width: 320px;
+  justify-content: space-between;
+  align-items: center;
   @media only screen and (min-width: 1024px) {
     width: 910px;
   }
   @media only screen and (min-width: 1920px) {
     width: 1168px;
   }
-  justify-content: space-between;
-  align-items: center;
 }
 #nav-logo{
   width: 133px;
@@ -35,15 +34,15 @@ nav{
 }
 #nav-links{
   display: none;
+  flex-direction: row;
+  width: 408px;
+  justify-content: space-between;
   @media only screen and (min-width: 1024px) {
     display: flex;
   }
-  flex-direction: row;
-  width: 408px;
   @media only screen and (min-width: 1920px) {
     width: 468px;
   }
-  justify-content: space-between;
 }
 #phone-number{
   color: $cl-white;
