--- a/src/splash.scss
+++ b/src/splash.scss
@@ -1,4 +1,4 @@
-@import "style";
+@use "style" as *;
 .splash{
   position: absolute;
   width: 100%;
@@ -16,20 +16,21 @@
   margin-top: 88px;
   height: 400px;
   gap: 40px;
-  @media only screen and (min-width: 1024px) {
-    height: 743px;
-    gap: 50px
-  }
-  width: 310px;
-  @media only screen and (min-width: 1024px) {
-    width: 914px;
-  }
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
   color: $cl-white;
   text-align: center;
+  width: 310px;
+  @media only screen and (min-width: 1024px) {
+    height: 743px;
+    gap: 50px
+  }
+  @media only screen and (min-width: 1024px) {
+    width: 914px;
+  }
+
 }
 #splash-t1{
   margin-top: 52px;
