--- a/src/footer.scss
+++ b/src/footer.scss
@@ -1,17 +1,21 @@
 @use "style" as *;
 footer{
     width: 100%;
-    height: 88px;
+    height: 95px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: $cl-beige-2;
+    @media only screen and (min-width: 1024px) {
+        height: 88px;
+    }
 }
 
 #footer-menu{
     display: flex;
     width: 317px;
+    height: 53px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -29,24 +33,40 @@ footer{
 #footer-links{
     display: flex;
     flex-direction: row;
-    width: 317px;
+    width: 308px;
     justify-content: space-between;
     align-items: center;
     @media only screen and (min-width: 1024px) {
-        width: 419px;
+        width: 408px;
     }
 }
-footer-lc{
+.footer-lc{
     display: flex;
     flex-direction: row;
-    width: 93px;
-    justify-content: space-between;
+    gap: 5px;
+    justify-content: center;
     align-items: center;
     @media only screen and (min-width: 1024px) {
         width: 120px;
+        gap: 10px
     }
 }
-footer-link:hover{
+.footer-logo{
+    width: 21px;
+    height: 21px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    @media only screen and (min-width: 1024px) {
+        width: 26px;
+        height: 26px;
+    }
+}
+#footer-logo-1{background-image: url("/telegram.svg")}
+#footer-logo-2{background-image: url("/facebook.svg")}
+#footer-logo-3{background-image: url("/vk.svg")}
+
+.footer-link:hover{
     @media only screen and (min-width: 1024px) {
         cursor: pointer;
         text-decoration: underline;
