--- a/src/splash.scss
+++ b/src/splash.scss
@@ -6,7 +6,7 @@
   background-size: cover;
   background-position: center;
   z-index: -2;
-  background-image: linear-gradient(180deg, rgba(0,0,0,0.4), rgba(0,0,0,0)), url("/splash.png");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), linear-gradient(180deg, rgba(0,0,0,0.4), rgba(0,0,0,0)), url("/splash.png");
   @media only screen and (min-width: 1024px) {
     height: 831px;
   }
