first round of fixes (incomplete)

--- a/src/adventures.scss
+++ b/src/adventures.scss
@@ -67,63 +67,63 @@
   }
 }
 #adventures-card-1{
-  background-image: url("/adventure-1.png");
+  background-image: url("/adventure-1.webp");
 }
 #adventures-card-2{
-  background-image: url("/adventure-2.png");
+  background-image: url("/adventure-2.webp");
   display: none;
   @media only screen and (min-width: 1920px) {
     display: flex;
   }
 }
 #adventures-card-3{
-  background-image: url("/adventure-3.png");
+  background-image: url("/adventure-3.webp");
   display: none;
   @media only screen and (min-width: 1024px) {
     display: flex;
   }
 }
 #adventures-card-4{
-  background-image: url("/adventure-4.png");
+  background-image: url("/adventure-4.webp");
 }
 #adventures-card-5{
-  background-image: url("/adventure-5.png");
+  background-image: url("/adventure-5.webp");
 }
 #adventures-card-6{
-  background-image: url("/adventure-6.png");
+  background-image: url("/adventure-6.webp");
   display: none;
   @media only screen and (min-width: 1024px) {
     display: flex;
   }
 }
 #adventures-card-7{
-  background-image: url("/adventure-7.jpeg");
+  background-image: url("/adventure-7.webp");
   display: none;
   @media only screen and (min-width: 1920px) {
     display: flex;
   }
 }
 #adventures-card-8{
-  background-image: url("/adventure-8.png");
+  background-image: url("/adventure-8.webp");
 }
 #adventures-card-9{
-  background-image: url("/adventure-9.png");
+  background-image: url("/adventure-9.webp");
 }
 #adventures-card-10{
-  background-image: url("/adventure-10.png");
+  background-image: url("/adventure-10.webp");
 }
 #adventures-card-11{
-  background-image: url("/adventure-11.png");
+  background-image: url("/adventure-11.webp");
 }
 #adventures-card-12{
-  background-image: url("/adventure-12.png");
+  background-image: url("/adventure-12.webp");
   display: none;
   @media only screen and (min-width: 1024px) {
     display: flex;
   }
 }
 #adventures-card-13{
-  background-image: url("/adventure-13.png");
+  background-image: url("/adventure-13.webp");
   display: none;
   @media only screen and (min-width: 1920px) {
     display: flex;
