--- a/src/reviews.scss
+++ b/src/reviews.scss
@@ -91,5 +91,5 @@
   height: 75px;
   border-radius: 100%;
 }
-#reviews-author-1{background-image: url("/review photo-1.png")}
-#reviews-author-2{background-image: url("/review photo-2.png")}
+#reviews-author-1{background-image: url("/review photo-1.webp")}
+#reviews-author-2{background-image: url("/review photo-2.webp")}
