--- a/src/splash.scss
+++ b/src/splash.scss
@@ -2,19 +2,16 @@
 .splash{
   position: absolute;
   width: 100%;
-  height: 488px;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   z-index: -2;
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), linear-gradient(180deg, rgba(0,0,0,0.4), rgba(0,0,0,0)), url("/splash.png");
-  @media only screen and (min-width: 1024px) {
-    height: 831px;
-  }
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), linear-gradient(180deg, rgba(0,0,0,0.4), rgba(0,0,0,0)), url("/splash.webp");
 }
 
 .splash-ad{
   margin-top: 88px;
-  height: 400px;
+  height: calc(100vh - 88px);
   gap: 40px;
   display: flex;
   flex-direction: column;
@@ -24,7 +21,6 @@
   text-align: center;
   width: 310px;
   @media only screen and (min-width: 1024px) {
-    height: 743px;
     gap: 50px
   }
   @media only screen and (min-width: 1024px) {
