--- a/src/nav.scss
+++ b/src/nav.scss
@@ -1,5 +1,7 @@
 @use "style" as *;
-nav{
+
+nav {
+  transition: background-color 0.3s ease, backdrop-filter 0.3s ease;
   width: 100%;
   height: 88px;
   position: absolute;
@@ -8,6 +10,41 @@ nav{
   justify-content: center;
   z-index: 2;
 }
+
+.navbar-scrolled {
+  position: fixed;
+  backdrop-filter: blur(10px);
+  background-color: rgba(243, 239, 232, 0.6);
+}
+
+#nav-logo {
+  transition: background-image 0.3s ease;
+  width: 133px;
+  height: 22px;
+  background-image: url("/YourTour-light.svg");
+  color: $cl-white;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  @media only screen and (min-width: 1024px) {
+    width:181.84px;
+    height:30.24px;
+  }
+}
+
+.navbar-scrolled #nav-logo {
+  background-image: url("/design-vanilla/YourTour-dark.svg");
+}
+
+#phone-number {
+  transition: color 0.3s ease;
+  color: $cl-white;
+}
+
+.navbar-scrolled #phone-number {
+  color: #1B1F2B;
+}
+
 #nav-menu{
   display: flex;
   flex-direction: row;
@@ -19,19 +56,6 @@ nav{
   }
   @media only screen and (min-width: 1920px) {
     width: 1168px;
-  }
-}
-#nav-logo{
-  width: 133px;
-  height: 22px;
-  background-image: url("/YourTour-light.svg");
-  color: $cl-white;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  @media only screen and (min-width: 1024px) {
-    width:181.84px;
-    height:30.24px;
   }
 }
 #nav-links{
@@ -46,18 +70,29 @@ nav{
     width: 468px;
   }
 }
-#phone-number{
-  color: $cl-white;
-}
-.nav-link{
+.nav-link {
+  transition: color 0.3s ease;
   color: $cl-white;
   text-decoration: none;
+}
+.navbar-scrolled .nav-link {
+  color: $cl-black;
 }
 .nav-link:hover{
   @media only screen and (min-width: 1024px) {
     cursor: pointer;
     text-decoration: underline;
     text-underline-color: $cl-white;
+    text-underline-style: single;
+    text-underline-position: under;
+    text-underline-offset: 2px;
+  }
+}
+.navbar-scrolled.nav-link:hover{
+  @media only screen and (min-width: 1024px) {
+    cursor: pointer;
+    text-decoration: underline;
+    text-underline-color: $cl-black;
     text-underline-style: single;
     text-underline-position: under;
     text-underline-offset: 2px;
